--- a/Desenvolvimento Web I/Exercicios/Exercicios7/exercicio9.html
+++ b/Desenvolvimento Web I/Exercicios/Exercicios7/exercicio9.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/exercicio7.js"></script>
-    <title>Exercício 7</title>
+    <script src="/js/exercicio9.js"></script>
+    <title>Exercício 9</title>
   </head>
   <body>
     <label>Entrada</label>
     <input type="text" id="entrada">
-    <button onclick="exer7()">ok</button>
-    <ol></ol>
+    <button onclick="exer9()">ok</button>
+    <ol id="saida"></ol>
+    <div>Total: <span id="total">0</span></div>
   </body>
-
-
-
 </html>
